Improve users services
